#1 :bug: z-index 수정
Former-commit-id: 1c2d9471cb83486e19260bbb1103073093028997

--- a/catchcatch/source/CSS/UI/StartPage.css
+++ b/catchcatch/source/CSS/UI/StartPage.css
@@ -285,7 +285,7 @@
   position: absolute;
   top: 200px;
   left: 150px;
-  z-index: 2;
+  z-index: -1;
 }
 
 .areaspace_1 {
